src/objects/Incentive__c.object
<CustomObject>
    <fields>
        <fullName>ACA_Host__c</fullName>
        <label>ACA Host</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adder_1_Rate__c</fullName>
        <label>Adder 1 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder_1__c</fullName>
        <label>Adder 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Trackers</fullName>
                </value>
                <value>
                    <fullName>Offtaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adder_2_Rate__c</fullName>
        <label>Adder 2 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder_2__c</fullName>
        <label>Adder 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Trackers</fullName>
                </value>
                <value>
                    <fullName>Offtaker</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adder_3_Rate__c</fullName>
        <label>Adder 3 Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adder_3__c</fullName>
        <label>Adder 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Storage</fullName>
                </value>
                <value>
                    <fullName>Trackers</fullName>
                </value>
                <value>
                    <fullName>Offtaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allocated_Size_KW_AC_1__c</fullName>
        <label>Allocated Size (KW AC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated_Size_KW_AC__c</fullName>
        <label>Allocated Size (KW AC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Fee_Amount__c</fullName>
        <label>Application Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_ID__c</fullName>
        <label>Application ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Compensation_Rate_Amount__c</fullName>
        <label>Base Compensation Rate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Capacity__c</fullName>
        <label>DC Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Application_Approved_1__c</fullName>
        <label>Date Application Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Approved__c</fullName>
        <label>Date Application Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Fee_Paid__c</fullName>
        <label>Date Application Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Submitted__c</fullName>
        <label>Date Application Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Application_Submitted_to_CLEAResult__c</fullName>
        <label>Date Application Submitted to CLEAResult</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Applied_for_Qualification_Extension__c</fullName>
        <label>Date Applied for Qualification Extension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Extension_Request_Approved__c</fullName>
        <label>Date Extension Request Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Large_Claim_Approved_To_CLEAR__c</fullName>
        <label>Date Final Large Claim Approved To CLEAR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Final_Large_Claim_Submitted_To_CLEA__c</fullName>
        <label>Date Final Large Claim Submitted To CLEA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_PTO_Letter_Sent_to_DOER__c</fullName>
        <label>Date PTO Letter Sent to DOER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualification_Expires__c</fullName>
        <label>Date Qualification Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualification_Extension_Approved__c</fullName>
        <label>Date Qualification Extension Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Qualification_Extension_Expires__c</fullName>
        <label>Date Qualification Extension Expires</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reservation_Extension_Fee_Paid__c</fullName>
        <label>Date Reservation Extension Fee Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Reservation_Extension_Requested__c</fullName>
        <label>Date Reservation Extension Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_System_NTS_Registered__c</fullName>
        <label>Date System NTS Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_System_Qualified__c</fullName>
        <label>Date System Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FERC_Docket_Filed_Date__c</fullName>
        <label>FERC Docket Filed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FERC_Docket_Number__c</fullName>
        <label>FERC Docket Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_ID__c</fullName>
        <label>Facility ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Type__c</fullName>
        <label>Incentive Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>MASS ACA</fullName>
                </value>
                <value>
                    <fullName>SMART</fullName>
                </value>
                <value>
                    <fullName>SREC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Reservation_Expiration_Date__c</fullName>
        <label>Initial Reservation Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Temp - in order to remove former Interconnection M-D from promotions. Delete this field in a later promotion.</description>
        <label>Interconnection</label>
        <referenceTo>Interconnection__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Market Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTS_Number__c</fullName>
        <label>NTS Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Private__c</fullName>
        <label>Public / Private</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Extension_Fee_Amount__c</fullName>
        <label>Reservation Extension Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SMANG__c</fullName>
        <label>SMANG #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMART_Allocation_Expiration_Date__c</fullName>
        <label>SMART Allocation Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Name__c</fullName>
        <label>System Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Status__c</fullName>
        <label>System Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Extension</fullName>
                </value>
                <value>
                    <fullName>Pending Utility Authorization</fullName>
                </value>
                <value>
                    <fullName>Incentive Applied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Incentive</label>
    <nameField>
        <label>Incentive</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentives</pluralLabel>
    <recordTypes>
        <fullName>Federal</fullName>
        <active>true</active>
        <label>Federal</label>
    </recordTypes>
    <recordTypes>
        <fullName>MASS_ACA</fullName>
        <active>true</active>
        <label>MASS ACA</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMART</fullName>
        <active>true</active>
        <label>SMART</label>
    </recordTypes>
    <recordTypes>
        <fullName>SREC</fullName>
        <active>true</active>
        <label>SREC</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>